--- a/jjapra/pom.xml
+++ b/jjapra/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>thymeleaf-extras-springsecurity6</artifactId>
             <version>3.1.0.M1</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
