--- a/jjapra/pom.xml
+++ b/jjapra/pom.xml
@@ -12,7 +12,7 @@
     <groupId>org.example</groupId>
     <artifactId>jjapra</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
