--- a/jjapra/src/main/resources/application.yml
+++ b/jjapra/src/main/resources/application.yml
@@ -20,3 +20,10 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
+
+
+jwt:
+  secret: your-secret-key
+  access-token:
+    expire-length: 3600000
