FEAT: server run

--- a/jjapra/pom.xml
+++ b/jjapra/pom.xml
@@ -102,9 +102,26 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <spring.profiles.active>local</spring.profiles.active>
+            </properties>
+        </profile>
+    </profiles>
+<!--    <resources>-->
+<!--        <resource>-->
+<!--            <directory>src/main/resources</directory>-->
+<!--            <filtering>true</filtering>-->
+<!--        </resource>-->
+<!--    </resources>-->
+
     <build>
         <plugins>
             <plugin>
