--- a/jjapra/.gitignore
+++ b/jjapra/.gitignore
@@ -1,8 +1,8 @@
-**/test/
+#**/test/
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-#!**/src/test/**/target/
+!**/src/test/**/target/
 
 ### IntelliJ IDEA ###
 .idea/workspace.xml
